# HaskellDiceCalculator

./: .gitignore  CHANGELOG.md  Dice.hs  DiceCalculator.cabal  DiceRoller.hs  Evaluator.hs  OperatorsAndFunctions.md  Parser.hs  README.md  Token.hs  Tokenizer.hs  Tree.hs
app/: Dice.hs  DiceRoller.hs  Error.hs  Evaluator.hs  Functions.hs  Operators.hs  Parser.hs  Token.hs  Tokenizer.hs  Tree.hs
